--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+.terminal-container {
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+  cursor: text;
+  background: #000;
+  background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.terminal-content {
+  padding: 20px;
+  height: 100%;
+  font-size: 15px;
+  line-height: 20px;
+  white-space: pre;
+  color: #ffffff;
+  font-family: monospace;
   display: flex;
   flex-direction: column;
+}
+.terminal-input-area {
+  display: inline-flex;
+  width: 100%;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.terminal-prompt {
+  margin-right: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.terminal-input {
+  font-family: inherit;
+  font-size: inherit;
+  font-size: inherit;
+  color: rgb(240, 191, 129);
+  background: transparent;
+  border: 0px;
+  outline: none; /* no highlight on focus */
+  width: 100%;
+}
+
+.terminal-error {
+  color: red;
+}
+
+.terminal-glow {
+  text-shadow: 0 0 3px #ff0000;
 }
