--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
 
 .terminal-content {
   padding: 20px;
-  height: 100%;
   font-size: 15px;
   line-height: 20px;
   white-space: pre-wrap;
@@ -50,7 +49,7 @@
 }
 
 .terminal-command-output ul {
-  margin: 0;
+  margin-top: 0;
 }
 
 .terminal-input-area {
