Scrolls last command to top of page on output change

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,10 @@
   margin-top: 0;
 }
 
+.terminal-command-record {
+  scroll-margin: 15px;
+}
+
 .terminal-input-area {
   display: inline-flex;
   width: 100%;
