--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+body,
+html,
+#root {
+  height: 100%;
+}
