--- a/src/App.css
+++ b/src/App.css
@@ -107,10 +107,10 @@
 }
 
 a {
-  color: purple;
+  color: #dea5f5;
 }
 a:hover {
   color: black;
-  background-color: purple;
+  background-color: #c4a5f5;
   text-decoration: none;
 }
